third_party/move/move-compiler-v2/tests/checking/typing/borrow_field_from_non_struct.exp

Diagnostics:
error: struct incompatible with integer
  ┌─ tests/checking/typing/borrow_field_from_non_struct.move:6:10
  │
6 │         &0.f;
  │          ^

error: struct incompatible with integer
  ┌─ tests/checking/typing/borrow_field_from_non_struct.move:7:10
  │
7 │         &0.g;
  │          ^

error: expected a struct with field `value` but found `u64`
  ┌─ tests/checking/typing/borrow_field_from_non_struct.move:8:10
  │
8 │         &u.value;
  │          ^

error: expected a struct with field `value` but found `bool`
  ┌─ tests/checking/typing/borrow_field_from_non_struct.move:9:10
  │
9 │         &cond.value;
  │          ^^^^

error: expected a struct with field `R` but found `address`
   ┌─ tests/checking/typing/borrow_field_from_non_struct.move:10:10
   │
10 │         &addr.R;
   │          ^^^^

error: expected a struct with field `f` but found `address`
   ┌─ tests/checking/typing/borrow_field_from_non_struct.move:11:10
   │
11 │         &addr.f;
   │          ^^^^

error: expected a struct with field `R` but found `()`
   ┌─ tests/checking/typing/borrow_field_from_non_struct.move:12:10
   │
12 │         &().R;
   │          ^^

error: expected a struct with field `f` but found `(&S, &S)`
   ┌─ tests/checking/typing/borrow_field_from_non_struct.move:13:10
   │
13 │         &(&S{f: 0}, &S{f:0}).f;
   │          ^^^^^^^^^^^^^^^^^^^
